Not much left I can do to fix the word wrap issues

--- a/frontend/src/app/pages/home/works/works.component.less
+++ b/frontend/src/app/pages/home/works/works.component.less
@@ -171,7 +171,7 @@ div.works-list-container {
                             font-size: 18px;
                             margin-bottom: 0;
                             margin-top: 0;
-
+                            word-wrap: normal;
                             i-feather {
                                 width: 18px;
                                 height: 18px;
